--- a/src/test/resources/html/test_template_invalid_fonts.html
+++ b/src/test/resources/html/test_template_invalid_fonts.html
@@ -4,7 +4,7 @@
     <title>Test template</title>
     <style>
         h1 {
-            font-family: sans-serif;
+            font-family: "Times New Roman", serif;
         }
     </style>
 </head>
