--- a/src/test/resources/html/test_template_invalid_fonts.html
+++ b/src/test/resources/html/test_template_invalid_fonts.html
@@ -4,11 +4,11 @@
     <title>Test template</title>
     <style>
         h1 {
-            font-family: sans-serif;
+            font-family: "Noto sans" !important;
         }
     </style>
 </head>
 <body>
-<h1>This should fail because it's not an embedded font</h1>
+<h1>This document shouldn't render fine</h1>
 </body>
 </html>
