partially fix tests

--- a/src/test/resources/html/test_template_included_fonts.html
+++ b/src/test/resources/html/test_template_included_fonts.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <title>Test template</title>
+    <meta name="subject" content="Dokumentemne"/>
+    <meta name="author" content="pdfgen"/>
+    <meta name="description" content="Test template"/>
     <style>
         h1 {
             font-family: "Source Sans Pro" !important;
